test/fail/Imports/Unsolved.agda

module Imports.Unsolved where

X : Set
X = ?

